# fastsos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_mosek.cpp  build_mosek.h  build_scs.cpp  build_scs.h  input.txt  main.cpp  manip_poly.cpp  manip_poly.h  polystring.cpp  polystring.h  sos.cpp  sos.h  tests.cpp  tests.h  timing.cpp  timing.h
problems/: Balkyl.txt  Bex2_1_3.txt  Bex2_1_8.txt  Bex2_1_8_alt.txt
sosadmm_src/cpp_files/: admm.cpp  h_ops.cpp  ordering.cpp  projection.cpp  sdp.cpp  vecop.cpp
sosadmm_src/h_files/: admm.h  h_ops.h  ordering.h  projection.h  sdp.h  vecop.h
sosadmm_src/speedTests/: constrainedTest.h  h_opsTests.h  projectionTests.h  unconstrainedTest.h  vecopTests.h
